Updates to latest MaloWLibJava and fixed some code errors.
Signed-off-by: MaloW <MaloW@spray.se>